# saras

./: .cpproj.yml  .gitignore  CMakeLists.txt  README.md  compilation_time.txt  graph.dot  ideas.md  input.in
.github/workflows/: build.yml
cmake/: FindLLVM.cmake
graphs/: graph0.dot  graph1.dot  graph2.dot  graph3.dot
images/: graph0.dot  graph1.dot
include/: JITClass.hpp  assert.hpp  ast.hpp  compiler.hpp  console.hpp  interpreter.hpp  lexer.hpp  tokens.hpp  utf8.hpp  util.hpp  visualise.hpp
programs/: README.md  caller_code_english.cpp  caller_code_hindi.cpp  caller_code_telugu.cpp  fact.kra  operators.saras  virhanka.saras  विरहंक.सारस  విరహంకా.సరస్
src/: ast.cpp  compiler.cpp  interpreter.cpp  lexer.cpp  main.cpp
